# Christians-Steam-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakefile.Common  Christians-Steam-Framework.sln  Christians-Steam-Framework.vcxproj  Christians-Steam-Framework.vcxproj.filters  CompileOptions.cmake  Config.xml  Defaults.props  Dependencies.txt  Framework.props  General Options.props  Links.txt  Notes.txt  Preamble.cpp  ReadMe.md  packages.config  vcpkg.json
Docs/: Architecture-Overview.md  Client-Modules.md  Clients.md  Clients.txt  Communication.md  Messageboard.md  SteamGuard.txt  UI.md  Whiteboard.md
Docs/Functions/: AddFreeLicense.md  DLCs.md  Discovery Queue.md  Licenses.md  Owned games.md  PlayGames.md
Docs/Unused/: StoreAPI.txt
Experimental/: SteamCloudDownload.cpp
Headers/: AcceptTrade.hpp  AppInfo.hpp  AsioThread.hpp  AsioYield.hpp  AssetData.hpp  AssetKey.hpp  Base64.hpp  BitField.hpp  BlockingQuery.hpp  CacheFile.hpp  Cloud.hpp  Config.hpp  DataFile.hpp  DerefStuff.hpp  DestructMonitor.hpp  EnumFlags.hpp  EnumString.hpp  Exception.hpp  Exceptions.hpp  ExecuteFibers.hpp  GameID.hpp  GlobalID.hpp  HTTPClient.hpp  JobID.hpp  Logging.hpp  Main.hpp  MaintainBPE.hpp  MiscIDs.hpp  MultiChar.hpp  Printable.hpp  ProtoBuf.hpp  Random.hpp  RateLimit.hpp  Regex.hpp  ResultCode.hpp  SafeCast.hpp  SendInventory.hpp  SendTrade.hpp  Settings.hpp  Startup.hpp  (+6 more)
Headers/Asio/: Asio.hpp  Connections.hpp  Fiber.hpp  HTTPClient.hpp  RateLimit.hpp  Signals.hpp
Headers/Client/: AccountFlags.hpp  CallbackWaiter.hpp  Cancel.hpp  Client.hpp  ClientInfo.hpp  Condition.hpp  Connection.hpp  Counter.hpp  DataFile.hpp  Dispatcher.hpp  Execute.hpp  Fiber.hpp  LicenseList.hpp  Messageboard.hpp  Module.hpp  Mutex.hpp  OSType.hpp  ResultWaiter.hpp  Service.hpp  Signal.hpp  Sleep.hpp  Waiter.hpp  Whiteboard.hpp
Headers/Connection/: Base.hpp  Encrypted.hpp  Endpoint.hpp  Message.hpp  Serialize.hpp  TCP.hpp
Headers/Helpers/: Destruct.hpp  HTML.hpp  HexString.hpp  JSON.hpp  NumberString.hpp  ParseNumber.hpp  ProtoBuf.hpp  ProtoPuf.hpp  StringCompare.hpp  Time.hpp  URLs.hpp
Headers/Modules/: AddFreeLicense.hpp  AssetData.hpp  AutoAccept.hpp  AutoLoadTradeoffers.hpp  BadgeData.hpp  CardFarmer.hpp  ClientNotification.hpp  Connection.hpp  Connection_Internal.hpp  DiscoveryQueue.hpp  Executor.hpp  GetBadgeData.hpp  Heartbeat.hpp  Inventory.hpp  InventoryNotification.hpp  LicenseList.hpp  Login.hpp  LoginTracking.hpp  MultiPacket.hpp  OwnedGames.hpp  PackageData.hpp  PackageInfo.hpp  PersonaState.hpp  PlayGames.hpp  SaleQueue.hpp  SaleSticker.hpp  SteamGuard.hpp  TradeOffers.hpp  TradeToken.hpp  UnifiedMessageClient.hpp  UnifiedMessageServer.hpp  ViewStream.hpp  WebSession.hpp
Headers/OpenSSL/: AES.hpp  BigNum.hpp  Exception.hpp  OSSLParams.hpp  RSA.hpp  Random.hpp  SHA1.hpp
Headers/Steam/: AccountFlags.hpp  AccountType.hpp  AppType.hpp  BillingType.hpp  CommunityItemClass.hpp  KeyValue.hpp  LicenseType.hpp  MachineInfo.hpp  MsgClientLogon.hpp  OSType.hpp  PaymentMethod.hpp  PersonaState.hpp
Headers/Steam/ProtoBuf/: steammessages_base.hpp  steammessages_clientserver.hpp  steammessages_clientserver_2.hpp  steammessages_clientserver_appinfo.hpp  steammessages_clientserver_friends.hpp  (+3 more)
Headers/UI/: CLI.hpp  UI.hpp
Headers/Web/: CookieJar.hpp  Cookies.hpp  URLEncode.hpp
Headers/WebAPI/: WebAPI.hpp
Sources/: AcceptTrade.cpp  AppInfo.cpp  AsioThread.cpp  AssetData.cpp  AssetKey.cpp  Base64.cpp  Boost.cpp  CacheFile.cpp  CancelTrade.cpp  Config.cpp  DataFile.cpp  DeclineTrade.cpp  DestructMonitor.cpp  Exception.cpp  ExecuteFibers.cpp  HTTPClient.cpp  JobID.cpp  Logging.cpp  Main.cpp  MaintainBPE.cpp  ParseToken.cpp  PostWithSession.cpp  Printable.cpp  Random.cpp  RateLimit.cpp  SendInventory.cpp  SendTrade.cpp  Settings.cpp  SteamID.cpp  Universe.cpp  WorkingDir.cpp
Sources/Asio/: Asio.cpp  BasicQuery.cpp  BasicQuery.hpp  BasicQueryRedirect.cpp  Connections.cpp  Fiber.cpp  HTTPClient.cpp  RateLimit.cpp  RateLimit.hpp  Signals.cpp
Sources/Client/: Client.cpp  ClientInfo.cpp  Connection-TCP.cpp  DataFile.cpp  Dispatcher.cpp  Endpoint.cpp  Execute.cpp  LicenseList.cpp  Login.cpp  Messageboard.cpp  Module.cpp  Sleep.cpp  Waiter.cpp  Whiteboard.cpp
Sources/Cloud/: Apps.cpp  Files.cpp  Platform.cpp
Sources/Connection/: Base.cpp  Encrypted.cpp  Endpoint.cpp  Message.cpp  Serialize.cpp  TCP.cpp
Sources/Helpers/: FromHexString.cpp  HTML.cpp  HexString.cpp  JSON.cpp  NextSteamDay.cpp  NumberString.cpp  PrintSize.cpp  ProtoBuf.cpp  StringCompare.cpp  Time.cpp  URLs.cpp
Sources/Modules/: AddFreeLicense.cpp  AssetData.cpp  AutoAccept.cpp  AutoLoadTradeoffers.cpp  CardFarmer.cpp  ClientAppList.cpp  ClientNotification.cpp  Connection.cpp  DiscoveryQueue.cpp  Executor.cpp  GetBadgeData.cpp  Heartbeat.cpp  IdleGame.cpp  Inventory.cpp  InventoryNotification.cpp  LicenseList.cpp  Login-Auth.cpp  Login-Session.cpp  Login-Session.hpp  LoginTracking.cpp  MultiPacket.cpp  OwnedGames.cpp  PackageData.cpp  PackageInfo.cpp  PersonaState.cpp  PlayGames.cpp  SaleQueue.cpp  SaleSticker.cpp  SteamGuard.cpp  TradeOffers.cpp  TradeOffers.hpp  TradeOffersParser.cpp  TradeToken.cpp  UnifiedMessageClient.cpp  UnifiedMessageServer.cpp  ViewStream.cpp  WebSession.cpp
Sources/OpenSSL/: AES.cpp  AESBase.cpp  AESHMAC.cpp  Exception.cpp  RSA.cpp  Random.cpp  SHA1.cpp  XCrypt.hpp
Sources/Settings/: SettingBool.cpp  SettingBotName.cpp  SettingString.cpp  Settings.cpp
Sources/Steam/: KeyValue.cpp  KeyValue_Deserialize.cpp  KeyValue_Deserialize_Text.cpp  KeyValue_Serialize.cpp  MachineInfo.cpp  OSType.cpp
Sources/Tests/: Asio.cpp  GetCMList.cpp  HTTPClient.cpp  Messageboard.cpp  Whiteboard.cpp
Sources/UI/: Console.cpp  ConsoleMonitor.cpp  ConsoleMonitor.hpp  UI.cpp
Sources/Web/: CookieJar.cpp  Cookies.cpp  URLEncode.cpp
Sources/WebAPI/: WebAPI.cpp
Tools/DecodeProtobuf/: Decode.cpp
Tools/Preamble/: Add-All.sh  Add.sh
VcpkgTriplets/: christian.cmake  windows-x64-debug.cmake  windows-x64-release.cmake
steamdatabase/: CMakeLists.txt  SubDir.cmake  protoc.sh
steamdatabase/protobufs/steam/: CMakeLists.txt
(+57 files in other folders)
